Added buyer capability to order from next lowest bidder when previous PO is cancelled. Refined creation of new variant.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -59,3 +59,4 @@ dd { width: 67%; }
 td.padrt { padding-right: 10px; } 
 .alert-heading { margin-bottom: 10px; }
 
+.variances h2 { margin-bottom: 15px; }
