--- a/app/views/buyer/_bid_select.html.erb
+++ b/app/views/buyer/_bid_select.html.erb
@@ -3,6 +3,7 @@
 		<% item.bids.group_by(&:bid_type).each do |type, bids| %>
 			<div class="cat <%= type %>">
 				<% hi_bid = bids[0] %>
+				<% lo_next = bids[-2] %>
 				<% lo_bid = bids[-1] %>
 
 				<%= content_tag :p, class: 'small' do %>
@@ -10,15 +11,25 @@
 					<%= content_tag :em, 'H' %>
 				<% end %>
 
-				<%= fields_for 'bids[]', item do |f| %>
-					<%= content_tag :p, class: "#{lo_bid.status_color_for_buyer}" do %>
-						<%= f.radio_button 'id', lo_bid.id if item.can_be_ordered %>
-						<%= content_tag :b, currency(lo_bid.amount), class: 'bid-amount' %>
-						<%= content_tag :em, 'L' %>
+				<% unless lo_bid.cancelled? && lo_bid != lo_next  %>
+					<%= fields_for 'bids[]', item do |f| %>
+						<%= content_tag :p, class: "#{lo_bid.status_color_for_buyer}" do %>
+							<%= f.radio_button 'id', lo_bid.id if item.can_be_ordered %>
+							<%= content_tag :b, currency(lo_bid.amount), class: 'bid-amount' %>
+							<%= content_tag :em, 'L' %>
+						<% end %>
+					<% end %>
+				<% else %>
+					<!-- provision for reorder from next lowest -->
+					<%= fields_for 'bids[]', item do |f| %>
+						<%= content_tag :p, class: "#{lo_next.status_color}" do %>
+							<%= f.radio_button 'id', lo_next.id if item.can_be_ordered && !lo_next.cancelled? %>
+							<%= content_tag :b, currency(lo_next.amount), class: 'bid-amount' %>
+							<%= content_tag :em, 'L' %>
+						<% end %>
+						<%= content_tag :p, currency(lo_bid.amount), class: 'cancelled small' %>
 					<% end %>
 				<% end %>
-				
-				<!-- provision for reorder from next lowest -->
 			</div>
 		<% end %>
 	</div>
