--- a/app/views/cart/add.js.erb
+++ b/app/views/cart/add.js.erb
@@ -1,4 +1,4 @@
-$("div#search-results").slideUp('slow');
+$("div#search-results").html("<%= escape_javascript(render 'cart/cart_rules') %>");
 $("div#parts-list").html("<%= escape_javascript(render 'cart/cart') %>");
 $("div#parts-list tr#<%= @item.id %>").effect("highlight", {}, 4000);
 $(".search-query").val('');
