--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -1,10 +1,6 @@
 <%= f.error_notification %>
 <%= content_tag :fieldset, id: 'vehicle' do %>
 	<%= content_tag :legend, 'Vehicle' %>
-	<div class="row">
-		<%= f.input :ref_no, label: 'Claim No.', wrapper_class: 'span4 control-group' %>
-		<%= f.input :date_of_loss, as: :string, input_html: {id: 'datepicker'}, wrapper_class: 'span4 control-group', placeholder: 'Click to select date', hint: 'Format: YYYY-MM-DD' %>
-	</div>
 	<%= f.input :vehicle, wrapper_class: 'clearfix', required: true do  %>
 		<%= f.input :year_model, collection: Entry::YEAR_MODELS, label: false, wrapper_html: { id: 'veh-year' }, prompt: 'Select Year' %>
 		<%= f.input :car_brand, label: false, wrapper_html: { id: 'veh-brand' } do %>
@@ -13,12 +9,16 @@
 		<% end %>
 		<%= f.input :car_model_id, collection:  @car_models, label: false, wrapper_html: { id: 'veh-model' }, include_blank: 'Select Model/Type', hint: 'example: Fortuner' %>
 		<%= f.input :car_variant_id, collection:  @car_variants, label: false, wrapper_html: { id: 'veh-variant' }, include_blank: 'Select Variant', hint: 'example: 2.5 G AT' %>
-		<%= link_to 'Click here', new_car_variant_path %>
+		<%= link_to 'Add New Variant', new_car_variant_path, class: 'btn', rel: 'tooltip', data: {'original-title' => 'Please SEARCH the brands and models thoroughly. Add new variants only as a LAST RESORT to avoid duplication.'} %>
 	<% end %>
 	<div class="row">
 		<%= f.input :plate_no, label: 'Plate Number', hint: "#{content_tag :strong, 'Proper format: XYZ-123'} (except diplomatic plates or conduction stickers)".html_safe, wrapper_class: 'span3 control-group' %>
 		<%= f.input :serial_no, label: 'Serial Number', hint: 'Make sure you put 17 digits here (international standard).', wrapper_class: 'span3 control-group' %>
 		<%= f.input :motor_no, label: 'Motor Number', wrapper_class: 'span3 control-group' %>
+	</div>
+	<div class="row">
+		<%= f.input :ref_no, label: 'Claim No.', wrapper_class: 'span6 control-group' %>
+		<%= f.input :date_of_loss, as: :string, input_html: {id: 'datepicker'}, wrapper_class: 'span4 control-group', placeholder: 'Click to select date', hint: 'Format: YYYY-MM-DD' %>
 	</div>
 	<div class="row">
 		<%= f.input :deliver_to, required: true, wrapper_class: 'span6 control-group' do %>
@@ -55,5 +55,6 @@
 				buttonImageOnly: true
 		});
 	});
+	$('a').tooltip();
 	</script>
 <% end %>
