Started private_pub. Not working yet. Fixed global messages display. For sellers, included display of winning bid if own bid lost.

--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -46,7 +46,7 @@
 
 td.bids input { margin-bottom: 4px; text-align: right; width: 100px }
 .bids-array { clear: both; position: relative; min-height: 1em; margin-bottom: 5px; 
-	p.label { font-size: 0.9em; font-weight: normal; /*margin-bottom:5px;*/ text-transform: none; }
+	//p.label { font-size: 0.9em; font-weight: normal; /*margin-bottom:5px;*/ text-transform: none; }
 	}
 .cat { min-height: 18px; width: 110px; 
 	input { margin-bottom: 0; text-align: right; width: 100px;}
