--- a/app/views/messages/destroy.js.erb
+++ b/app/views/messages/destroy.js.erb
@@ -1,2 +1,2 @@
-$("dt.line_<%= @message.id %>").fadeOut();
-$("dd.line_<%= @message.id %>").fadeOut();
+$("dt.line_<%= @message.id %>").fadeOut().remove();
+$("dd.line_<%= @message.id %>").fadeOut().remove();
