--- a/app/views/seller/worksheet.html.erb
+++ b/app/views/seller/worksheet.html.erb
@@ -2,9 +2,9 @@
 	<thead>
     <%= content_tag :th, 'Vehicle', class: 'span4' %>
     <%= content_tag :th, 'Parts', class: 'span4' %>
-    <%= content_tag :th, 'Orig', class: 'span3 center' %>
-    <%= content_tag :th, 'Rep', class: 'span3 center' %>
-    <%= content_tag :th, 'Surp', class: 'span3 center' %>
+    <%= content_tag :th, 'Orig', class: 'span3 txtcenter' %>
+    <%= content_tag :th, 'Rep', class: 'span3 txtcenter' %>
+    <%= content_tag :th, 'Surp', class: 'span3 txtcenter' %>
 	</thead>
 	<% for entry in @entries %>
 		<tr>
