--- a/app/views/layouts/print.html.erb
+++ b/app/views/layouts/print.html.erb
@@ -13,7 +13,7 @@
   <body class="<%= params[:controller] %>">
 		<div id="print-header">
 			<%= link_to (content_tag :h1, "E-Bid Auto Parts Auction System"), root_path %>
-			<div id="print-nav" class="btn-group">
+			<div id="print-nav" class="btn-group span2">
 	     	<%= link_with_icon("", :back, 'backward') %>
 	    	<%= link_with_icon("", root_path, 'home') %>
 				<%= link_with_icon('Print', '#', 'print', nil, false, true) %>
