--- a/app/views/seller/orders.html.erb
+++ b/app/views/seller/orders.html.erb
@@ -36,7 +36,7 @@
 							<%= content_tag :p do %>
 								<%= link_to("PO##{order.id}", order) %>
 								<% if order.messages.present? %>
-								<span class='highlight'>
+								<span class='highlight' rel='tooltip' title="<%= pluralize order.messages.size, 'message' %>">
 									<%= content_tag :i, '', class: 'icon-comment' %>
 									<%= order.messages.size %>
 								</span>
@@ -76,3 +76,5 @@
 		<% end %>
 	<% end %>
 <% end %>
+
+<%= render 'shared/tooltip_entries' %>
