Changed the homepage - temporary.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -47,8 +47,8 @@
 				</div> <!-- end of span3 -->
 			</div>
     </div> <!--! end of .container -->
-    <footer>
-    </footer>
+    <!-- <footer>
+    </footer> -->
 		<div id="javascripts">
 	    <%= javascript_include_tag "application" %>
 			<%= yield(:javascripts) %>
