--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,10 +1,13 @@
+.hero-unit .row { margin-top: 35px; } 
+
 #main { position: relative; }
 .alert-message { padding-top: 15px; padding-bottom: 15px; }
 .table {
 	p { margin-bottom: 0px; }
-	tr:last-child td { border-bottom: 1px solid #DDD; }
+	tr:last-child  { border-bottom: 1px solid #DDD; }
 	tbody tr.label:hover td, tbody tr.label:hover th { background-color: transparent !important; }
 	p.label { font-size: 0.9em; font-weight: normal; /*margin-bottom:5px;*/ text-transform: none; }
+	.span3 p.label { text-transform: uppercase; }
 	}
 .table tbody tr:hover td, .table tbody tr:hover th { background-color: white !important; }
 .floatright { float: right; margin-left: 5px;}
