--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -6,7 +6,7 @@
 	<%= render 'shared/sidebar_dates' %>
 <% end %>
 
-<%#= render 'shared/photo_set' %>
+<%= render 'shared/photo_set' %>
 
 <div id="parts-list">
 	<% if @entry.line_items.size > 0 %>
