--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,9 @@
 				</div> <!-- end of span3 -->
 			</div>
     </div> <!--! end of .container -->
-    <!-- <footer>
-    </footer> -->
+    <footer>
+			<%= Rails.env %>
+    </footer>
 		<div id="javascripts">
 	    <%= javascript_include_tag "application" %>
 			<%= yield(:javascripts) %>
