--- a/app/views/buyer/_bid_select.html.erb
+++ b/app/views/buyer/_bid_select.html.erb
@@ -11,7 +11,7 @@
 					<%= content_tag :em, 'H' %>
 				<% end %>
 
-				<% unless lo_bid.cancelled? && lo_bid != lo_next  %>
+				<% unless lo_bid.cancelled? && lo_next.present? && lo_bid.id != lo_next.id  %>
 					<%= fields_for 'bids[]', item do |f| %>
 						<%= content_tag :p, class: "#{lo_bid.status_color_for_buyer}" do %>
 							<%= f.radio_button 'id', lo_bid.id if item.can_be_ordered %>
